--- a/api/v1/.htaccess
+++ b/api/v1/.htaccess
@@ -1,6 +1,8 @@
+Options -Indexes
+
 <IfModule mod_rewrite.c>
     RewriteEngine On
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^(.*)$ index.php?route=$1 [QSA,NC,L]
+    RewriteRule ^(.*)$ core/api.php?route=$1 [QSA,NC,L]
 </IfModule>
