--- a/api/config.json
+++ b/api/config.json
@@ -4,6 +4,6 @@
         "host": "localhost",
         "username": "root",
         "password": "",
-        "database": "chat_app"
+        "database": "sandbox"
     }
 }
