--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
-# Necessary for running html5Mode in Angular
+# Needed for running html5Mode in Angular
 
 RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
