--- a/api/composer.json
+++ b/api/composer.json
@@ -1,4 +1,6 @@
 {
+    "name": "adodb-php-endpoint",
+    "description": "simple adodb-php endpoint system for GET, PUT, DELETE, and UPDATE endpoints",
     "require": {
         "adodb/adodb-php": "^5.20"
     }
