--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "bramus/router": "^1.1",
         "adodb/adodb-php": "^5.20",
-        "lcobucci/jwt": "^3.2"
+        "lcobucci/jwt": "^3.2",
+        "firebase/php-jwt": "^4.0"
     }
 }
