--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "angular-aria": ">=1.3 <1.6",
     "angular-material": "^1.1.3",
     "angular-ui-router": "^0.4.2",
+    "jquery": "^3.2.1",
     "jquery-ui-npm": "^1.12.0"
   },
   "devDependencies": {},
