--- a/package.json
+++ b/package.json
@@ -10,16 +10,23 @@
     "angular-material": "^1.1.3",
     "angular-ui-router": "^0.4.2",
     "jquery": "^3.2.1",
-    "jquery-ui-npm": "^1.12.0"
+    "jquery-ui-npm": "^1.12.0",
+    "npm-modernizr": "^2.8.3"
   },
   "devDependencies": {
     "browser-sync": "^2.18.8",
     "connect-history-api-fallback": "^1.3.0",
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
+    "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^3.2.0",
+    "gulp-jshint": "^2.0.4",
     "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^2.1.2"
+    "gulp-uglify": "^2.1.2",
+    "jshint": "^2.9.4",
+    "merge-stream": "^1.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
