--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "angular-ui-router": "^0.4.2",
     "jquery": "^3.2.1",
     "jquery-ui-npm": "^1.12.0",
+    "md-icons": "^1.0.0",
     "npm-modernizr": "^2.8.3"
   },
   "devDependencies": {
