--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "connect-history-api-fallback": "^1.3.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^4.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.2.0",
