--- a/package.json
+++ b/package.json
@@ -20,17 +20,26 @@
     "browser-sync": "^2.18.8",
     "connect-history-api-fallback": "^1.3.0",
     "del": "^2.2.2",
+    "event-stream": "^3.3.4",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-concat": "^2.6.1",
+    "gulp-gzip": "^1.4.0",
+    "gulp-html-replace": "^1.6.2",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.2.0",
+    "gulp-inject": "^4.2.0",
     "gulp-jshint": "^2.0.4",
+    "gulp-merge": "^0.1.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
     "gulp-sass": "^3.1.0",
+    "gulp-string-replace": "^0.4.0",
     "gulp-strip-comments": "^2.4.5",
     "gulp-uglify": "^2.1.2",
     "jshint": "^2.9.4",
-    "merge-stream": "^1.0.1"
+    "merge-stream": "^1.0.1",
+    "yargs": "^8.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
