--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angular-app",
   "version": "1.0.0",
   "description": "Single page app with PHP Restful API",
-  "main": "index.js",
+  "main": "app.js",
   "dependencies": {
     "angular": ">=1.3 <1.6",
     "angular-animate": ">=1.3 <1.6",
@@ -23,13 +23,13 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-gzip": "^1.4.0",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.2.0",
     "gulp-jshint": "^2.0.4",
     "gulp-merge": "^0.1.1",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.1.2",
+    "gulp-zip": "^4.0.0",
     "jshint": "^2.9.4",
     "merge-stream": "^1.0.1",
     "run-sequence": "^1.2.2",
