--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jquery": "^3.2.1",
     "jquery-ui-npm": "^1.12.0",
     "md-icons": "^1.0.0",
+    "node-sass": "^4.5.3",
     "normalize.css": "^6.0.0",
     "npm-modernizr": "^2.8.3",
     "run-sequence": "^1.2.2"
