--- a/.gitignore
+++ b/.gitignore
@@ -31,17 +31,17 @@ build/Release
 node_modules
 jspm_packages
 
-#IDE specific directories
+# IDE specific directories
 .vscode
 
-#Build Folders
+# Build Folders
 dist
 test
 
-#Compressed files
+# Compressed files
 *.zip
 
-#SASS cache directory
+# SASS cache directory
 .sass-cache
 
 # Optional npm cache directory
@@ -58,3 +58,12 @@ test
 
 # Yarn Integrity file
 .yarn-integrity
+
+# OSX Specific
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
