--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-merge": "^0.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
+    "gulp-sass-import-once": "^2.0.2",
     "gulp-uglify": "^2.1.2",
     "gulp-zip": "^4.0.0",
     "jshint": "^2.9.4",
