--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.2.0",
     "gulp-jshint": "^2.0.4",
+    "gulp-json-minify": "^1.2.0",
     "gulp-merge": "^0.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
