--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "angular-ui-router": "^0.4.2",
     "jquery": "^3.2.1",
     "jquery-ui-npm": "^1.12.0",
+    "lodash": "^4.17.4",
     "md-icons": "^1.0.0",
     "ng-smooth-scroll": "^1.7.3",
     "node-sass": "^4.5.3",
